--- a/index.html
+++ b/index.html
@@ -2,8 +2,33 @@
 <html lang="en">
     <head>
     <link rel="stylesheet" href="mainStyle.css">
+    <script src="https://kit.fontawesome.com/efe82e1412.js" crossorigin="anonymous"></script>
     </head>
   <body>
-  <p>test text</p>
+    <div class="navHeader">
+      <div><a href="#"><img src="assets/sub/images/logo/Reservia.svg" alt="Reservia Logo"></a></div>
+      <div></div>
+      <div><a href="#">Accommodations</a></div>
+      <div><a href="#">Activities</a></div>
+      <div><a href="#">Sign Up</a></div>
+    </div>
+    <div class="headerText">
+      <h1>Find a place for your dream vacation</h1>
+      <h3>Downtown or in nature</h3>
+    </div>
+    <div class="searchBar">
+      <form class="searchForm" action="#"><!-- The easy way of removing gaps between buttons. LMAO. Don't judge me
+      --><button type="submit"><i class="fas fa-map-marker-alt"></i></button><!--
+      --><input type="text" placeholder="Marseille, France" name="search"><!--
+      --><button type="submit">Search</button>
+      </form>
+    </div>
+    <div class="filters">
+      <div>Filters</div>
+      <div><div class="filterCircle"></div><div>Low Cost</div></div>
+      <div><div class="filterCircle"></div>Romantic</div>
+      <div><div class="filterCircle"></div>Family-Friendly</div>
+      <div><div class="filterCircle"></div>Pets Allowed</div>
+    </div>
   </body>
 </html>
