--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     </div>
     <div class="filters">
       <div>Filters</div>
-      <div><div class="filterCircle"></div><div>Low Cost</div></div>
+      <div><div class="filterCircle"></div>Low Cost</div>
       <div><div class="filterCircle"></div>Romantic</div>
-      <div><div class="filterCircle"></div>Family-Friendly</div>
+      <div><div class="filterCircle"></div>Family-Friendly-sajflk</div>
       <div><div class="filterCircle"></div>Pets Allowed</div>
     </div>
   </body>
