--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
   <body>
     <div class="navHeader">
-      <div><a href="#"><img src="assets/sub/images/logo/Reservia.svg" alt="Reservia Logo"></a></div>
+      <div><a href="#"><img class="logo" src="assets/sub/images/logo/Reservia.svg" alt="Reservia Logo"></a></div>
       <div></div>
       <div><a href="#">Accommodations</a></div>
       <div><a href="#">Activities</a></div>
@@ -17,18 +17,41 @@
       <h3>Downtown or in nature</h3>
     </div>
     <div class="searchBar">
-      <form class="searchForm" action="#"><!-- The easy way of removing gaps between buttons. LMAO. Don't judge me
-      --><button type="submit"><i class="fas fa-map-marker-alt"></i></button><!--
+      <form class="searchForm" action="#">
+      <button type="submit"><i class="fas fa-map-marker-alt"></i></button><!--
       --><input type="text" placeholder="Marseille, France" name="search"><!--
-      --><button type="submit">Search</button>
+      --><button type="submit"><span>Search</span><span><i class="fas fa-search"></i></span></button>
       </form>
     </div>
+    
     <div class="filters">
-      <div>Filters</div>
-      <div><div class="filterCircle"></div>Low Cost</div>
-      <div><div class="filterCircle"></div>Romantic</div>
-      <div><div class="filterCircle"></div>Family-Friendly-sajflk</div>
-      <div><div class="filterCircle"></div>Pets Allowed</div>
+      <div class="filterText">Filters</div>
+      <div class="filterBox"><div><i class="fas fa-money-bill-wave"></i></div>Low Cost</div>
+      <div class="filterBox"><div><i class="fas fa-user-friends"></i></div>Romantic</div>
+      <div class="filterBox"><div><i class="fas fa-heart"></i></div>Family-Friendly</div>
+      <div class="filterBox"><div><i class="fas fa-dog"></i></div>Pets Allowed</div>
+    </div>
+    <div class="info">
+      <p><span>i</span> More than 500 accommodations are available in this city</p>
+    </div>
+    <div class="topContent">
+      <div class="topOne">
+        <div class="title"><h2>Accomodations in Marseille</h2></div>
+        <div class="flexWrapper">
+          <div class="accommodations"><div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div><div></div></div>
+          <div class="accommodations"><div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div></div>
+          <div class="accommodations"><div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div></div>
+          <div class="accommodations"><div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div></div>
+          <div class="accommodations"><div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div></div>
+          <div class="accommodations"><div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div></div>
+        </div>
+      </div>
+      <div class="gapper"></div>
+      <div class="topTwo">1</div>
+    </div>
+    <div class="middleContent">
+
+
     </div>
   </body>
 </html>
