--- a/index.html
+++ b/index.html
@@ -1,9 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mainStyle.css">
+    <script src="https://kit.fontawesome.com/efe82e1412.js" crossorigin="anonymous"></script>
     </head>
   <body>
-  <p>test text</p>
+    <div class="navHeader">
+      <div><a href="#"><img class="logo" src="assets/sub/images/logo/Reservia.svg" alt="Reservia Logo"></a></div>
+      <div></div>
+      <div><a href="#">Accommodations</a></div>
+      <div><a href="#">Activities</a></div>
+      <div><a href="#">Sign Up</a></div>
+    </div>
+    <div class="headerText">
+      <h1>Find a place for your dream vacation</h1>
+      <h3>Downtown or in nature</h3>
+    </div>
+    <div class="searchBar">
+      <form class="searchForm" action="#">
+      <button type="submit"><i class="fas fa-map-marker-alt"></i></button><!--
+      --><input type="text" placeholder="Marseille, France" name="search"><!--
+      --><button type="submit"><span>Search</span><span><i class="fas fa-search"></i></span></button>
+      </form>
+    </div>
+    
+    <div class="filters">
+      <div class="filterText">Filters</div>
+      <div class="filterBox"><div><i class="fas fa-money-bill-wave"></i></div>Low Cost</div>
+      <div class="filterBox"><div><i class="fas fa-user-friends"></i></div>Romantic</div>
+      <div class="filterBox"><div><i class="fas fa-heart"></i></div>Family-Friendly</div>
+      <div class="filterBox"><div><i class="fas fa-dog"></i></div>Pets Allowed</div>
+    </div>
+    <div class="info">
+      <p><span>i</span> More than 500 accommodations are available in this city</p>
+    </div>
+    <div class="topContent">
+      <div class="topOne">
+        <div class="title"><h2>Accomodations in Marseille</h2></div>
+        <div class="flexWrapper">
+          <div class="accommodations">
+            <div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+            <div class="displayInfo">
+              <div class="topText">Auberge la Cannebiere</div>
+              <div class="middleText">Night Starting at <span class="money">25$</span></div>
+              <div class="starsRating">
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOff"><i class="fas fa-star"></i></span>
+              </div>
+            </div>
+          </div>
+          <div class="accommodations">
+            <div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+            <div class="displayInfo">
+              <div class="topText">Auberge la Cannebiere</div>
+              <div class="middleText">Night Starting at <span class="money">25$</span></div>
+              <div class="starsRating">
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+              </div>
+            </div>
+          </div>
+          <div class="accommodations">
+            <div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+            <div class="displayInfo">
+              <div class="topText">Auberge la Cannebiere</div>
+              <div class="middleText">Night Starting at <span class="money">25$</span></div>
+              <div class="starsRating">
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOff"><i class="fas fa-star"></i></span>
+              </div>
+            </div>
+          </div>
+          <div class="accommodations">
+            <div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+            <div class="displayInfo">
+              <div class="topText">Auberge la Cannebiere</div>
+              <div class="middleText">Night Starting at <span class="money">25$</span></div>
+              <div class="starsRating">
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOff"><i class="fas fa-star"></i></span>
+                <span class="star sOff"><i class="fas fa-star"></i></span>
+              </div>
+            </div>
+          </div>
+          <div class="accommodations">
+            <div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+            <div class="displayInfo">
+              <div class="topText">Auberge la Cannebiere</div>
+              <div class="middleText">Night Starting at <span class="money">25$</span></div>
+              <div class="starsRating">
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOff"><i class="fas fa-star"></i></span>
+              </div>
+            </div>
+          </div>
+          <div class="accommodations">
+            <div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+            <div class="displayInfo">
+              <div class="topText">Auberge la Cannebiere</div>
+              <div class="middleText">Night Starting at <span class="money">25$</span></div>
+              <div class="starsRating">
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+                <span class="star sOn"><i class="fas fa-star"></i></span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="title"><h2>Show More</h2></div>
+      </div>
+      <div class="gapper"></div>
+      <div class="topTwo">
+        <div class="title t2"><h2>Most Popular</h2><span><i class="fas fa-chart-line"></i></span></div>
+        <div class="populars">
+          <div class="popularsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+          <div class="displayInfo d1">
+            <div class="topText p3">Auberge la Cannebiere</div>
+            <div class="middleText p1">Night Starting at <span class="money">25$</span></div>
+            <div class="starsRating p2">
+              <span class="star sOn"><i class="fas fa-star"></i></span>
+              <span class="star sOn"><i class="fas fa-star"></i></span>
+              <span class="star sOn"><i class="fas fa-star"></i></span>
+              <span class="star sOn"><i class="fas fa-star"></i></span>
+              <span class="star sOn"><i class="fas fa-star"></i></span>
+            </div>
+          </div>
+        </div>
+        <div class="populars">
+          <div class="popularsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+          <div class="displayInfo d1">
+            <div class="topText p3">Auberge la Cannebiere</div>
+            <div class="middleText p1">Night Starting at <span class="money">25$</span></div>
+            <div class="starsRating p2">
+              <span class="star sOn"><i class="fas fa-star"></i></span>
+              <span class="star sOn"><i class="fas fa-star"></i></span>
+              <span class="star sOn"><i class="fas fa-star"></i></span>
+              <span class="star sOn"><i class="fas fa-star"></i></span>
+              <span class="star sOn"><i class="fas fa-star"></i></span>
+            </div>
+          </div>
+        </div>
+        <div class="populars">
+          <div class="popularsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+          <div class="displayInfo d1">
+            <div class="topText p3">Auberge la Cannebiere</div>
+            <div class="middleText p1">Night Starting at <span class="money">25$</span></div>
+            <div class="starsRating p2">
+              <span class="star sOn"><i class="fas fa-star"></i></span>
+              <span class="star sOn"><i class="fas fa-star"></i></span>
+              <span class="star sOn"><i class="fas fa-star"></i></span>
+              <span class="star sOn"><i class="fas fa-star"></i></span>
+              <span class="star sOn"><i class="fas fa-star"></i></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="middleContent">
+      
+
+    </div>
   </body>
 </html>
