--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       </div>
       <div class="gapper"></div>
       <div class="topTwo">
+        <div class="popularsContainer">
         <div class="title t2"><h2>Most Popular</h2><span><i class="fas fa-chart-line"></i></span></div>
         <div class="populars">
           <div class="popularsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
@@ -169,6 +170,7 @@
               <span class="star sOn"><i class="fas fa-star"></i></span>
               <span class="star sOn"><i class="fas fa-star"></i></span>
             </div>
+          </div>
           </div>
         </div>
       </div>
