--- a/index.html
+++ b/index.html
@@ -177,8 +177,34 @@
       </div>
     </div>
     <div class="middleContent">
+      <div class="title t3"><h2>Activities in Marsielle</h2></div>
+      <div class="middleWrapper">
+        <div class="activitiesBox activitiesLarge">
+          <img src="assets/sub/images/rooms/4_small/1.jpg" alt="activities">
+          <div class="actText">Old Port</div>
+        </div>
+        <div class="activitiesBox activitiesSmall">
+          <img src="assets/sub/images/rooms/4_small/1.jpg" alt="activities">
+          <div class="actText p1">Old Port</div>
+        </div>
+        <div class="activitiesBox activitiesSmall">
+          <img src="assets/sub/images/rooms/4_small/1.jpg" alt="activities">
+          <div class="actText p1">Old Port</div>
+        </div>
+        <div class="activitiesBox activitiesLarge">
+          <img src="assets/sub/images/rooms/4_small/1.jpg" alt="activities">
+          <div class="actText p1">Old Port</div>
+        </div>
+        <div class="activitiesBox activitiesSmall">
+          <img src="assets/sub/images/rooms/4_small/1.jpg" alt="activities">
+          <div class="actText p1">Old Port</div>
+        </div>
+        <div class="activitiesBox activitiesSmall">
+          <img src="assets/sub/images/rooms/4_small/1.jpg" alt="activities">
+          <div class="actText p1">Old Port</div>
+        </div>
       
-
+      </div>
     </div>
   </body>
 </html>
