--- a/index.html
+++ b/index.html
@@ -203,8 +203,26 @@
           <img src="assets/sub/images/rooms/4_small/1.jpg" alt="activities">
           <div class="actText p1">Old Port</div>
         </div>
-      
       </div>
+    </div>
+    <div class="footer">
+      <div class="footWrapper">
+        <div class="footColWrap">
+          <div class="footCol"></div>
+          <div class="footCol"></div>
+          <div class="footCol"></div>  
+        </div>
+        <div class="footColWrap">
+          <div class="footCol"></div>
+          <div class="footCol"></div>
+          <div class="footCol"></div>  
+        </div>
+      </div> 
+      <div class="footColWrap">
+          <div class="footCol"></div>
+          <div class="footCol"></div>
+          <div class="footCol"></div>  
+        </div>
     </div>
   </body>
 </html>
