--- a/index.html
+++ b/index.html
@@ -208,20 +208,21 @@
     <div class="footer">
       <div class="footWrapper">
         <div class="footColWrap">
-          <div class="footCol"></div>
-          <div class="footCol"></div>
-          <div class="footCol"></div>  
+          <div class="footCol">About</div>
+          <div class="footCol">Site Map</div>
+          <div class="footCol">General Terms and Conditions</div>
+          <div class="footCol">Data and Privacy</div>  
         </div>
         <div class="footColWrap">
-          <div class="footCol"></div>
-          <div class="footCol"></div>
-          <div class="footCol"></div>  
+          <div class="footCol">Our Accommodations</div>
+          <div class="footCol">Quility Assesment</div>
+          <div class="footCol">You have a hotel?</div>  
         </div>
       </div> 
       <div class="footColWrap">
-          <div class="footCol"></div>
-          <div class="footCol"></div>
-          <div class="footCol"></div>  
+          <div class="footCol">Assistance</div>
+          <div class="footCol">Help Desk</div>
+          <div class="footCol">Contact Us</div>  
         </div>
     </div>
   </body>
