--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  
     <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="mainStyle.css">
     <script src="https://kit.fontawesome.com/efe82e1412.js" crossorigin="anonymous"></script>
     </head>
@@ -130,7 +131,6 @@
       <div class="topTwo">        
       <div class="title t2"><h2>Most Popular</h2><span><i class="fas fa-chart-line"></i></span></div>
         <div class="popularsContainer">
-
         <div class="populars">
           <div class="popularsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
           <div class="displayInfo d1">
@@ -176,6 +176,7 @@
         </div>
       </div>
     </div>
+    <!--
     <div class="middleContent">
       <div class="title t3"><h2>Activities in Marsielle</h2></div>
       <div class="middleWrapper">
@@ -205,6 +206,8 @@
         </div>
       </div>
     </div>
+  -->
+    <!--
     <div class="footer">
       <div class="footWrapper">
         <div class="footColWrap">
@@ -218,12 +221,13 @@
           <div class="footCol">Quility Assesment</div>
           <div class="footCol">You have a hotel?</div>  
         </div>
-      </div> 
       <div class="footColWrap">
           <div class="footCol">Assistance</div>
           <div class="footCol">Help Desk</div>
           <div class="footCol">Contact Us</div>  
         </div>
+      </div>
     </div>
+  -->
   </body>
 </html>
