--- a/index.html
+++ b/index.html
@@ -2,41 +2,44 @@
 <html lang="en">
   
     <head>
-      <meta name="viewport" content="width=device-width">
+      <title>Reservia, Find the perfect getaway</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="mainStyle.css">
     <script src="https://kit.fontawesome.com/efe82e1412.js" crossorigin="anonymous"></script>
     </head>
   <body>
-    <div class="navHeader">
+    <nav class="navHeader">
       <div><a href="#"><img class="logo" src="assets/sub/images/logo/Reservia.svg" alt="Reservia Logo"></a></div>
       <div></div>
       <div><a href="#">Accommodations</a></div>
       <div><a href="#">Activities</a></div>
       <div><a href="#">Sign Up</a></div>
-    </div>
-    <div class="headerText">
+    </nav>
+    <header class="headerText">
       <h1>Find a place for your dream vacation</h1>
       <h3>Downtown or in nature</h3>
-    </div>
-    <div class="searchBar">
+    </header>
+    
+    <nav class="searchBar">
       <form class="searchForm" action="#">
       <button type="submit"><i class="fas fa-map-marker-alt"></i></button><!--
       --><input type="text" placeholder="Marseille, France" name="search"><!--
       --><button type="submit"><span>Search</span><span><i class="fas fa-search"></i></span></button>
       </form>
-    </div>
+    </nav>
     
-    <div class="filters">
+    <nav class="filters">
       <div class="filterText">Filters</div>
       <div class="filterBox"><div><i class="fas fa-money-bill-wave"></i></div>Low Cost</div>
       <div class="filterBox"><div><i class="fas fa-user-friends"></i></div>Romantic</div>
       <div class="filterBox"><div><i class="fas fa-heart"></i></div>Family-Friendly</div>
       <div class="filterBox"><div><i class="fas fa-dog"></i></div>Pets Allowed</div>
-    </div>
+    </nav>
     <div class="info">
       <p><span>i</span> More than 500 accommodations are available in this city</p>
     </div>
-    <div class="topContent">
+  
+    <main class="topContent">
       <div class="topOne">
         <div class="title"><h2>Accomodations in Marseille</h2></div>
         <div class="flexWrapper">
@@ -55,10 +58,10 @@
             </div>
           </div>
           <div class="accommodations">
-            <div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+            <div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/2.jpg" alt="Location"></div>
             <div class="displayInfo">
-              <div class="topText">Auberge la Cannebiere</div>
-              <div class="middleText">Night Starting at <span class="money">25$</span></div>
+              <div class="topText">Hotel du port</div>
+              <div class="middleText">Night Starting at <span class="money">52$</span></div>
               <div class="starsRating">
                 <span class="star sOn"><i class="fas fa-star"></i></span>
                 <span class="star sOn"><i class="fas fa-star"></i></span>
@@ -69,10 +72,10 @@
             </div>
           </div>
           <div class="accommodations">
-            <div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+            <div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/3.jpg" alt="Location"></div>
             <div class="displayInfo">
-              <div class="topText">Auberge la Cannebiere</div>
-              <div class="middleText">Night Starting at <span class="money">25$</span></div>
+              <div class="topText">Les mouettes Hotel</div>
+              <div class="middleText">Night Starting at <span class="money">76$</span></div>
               <div class="starsRating">
                 <span class="star sOn"><i class="fas fa-star"></i></span>
                 <span class="star sOn"><i class="fas fa-star"></i></span>
@@ -83,10 +86,10 @@
             </div>
           </div>
           <div class="accommodations">
-            <div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+            <div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/4.jpg" alt="Location"></div>
             <div class="displayInfo">
-              <div class="topText">Auberge la Cannebiere</div>
-              <div class="middleText">Night Starting at <span class="money">25$</span></div>
+              <div class="topText">Hotel de la mer</div>
+              <div class="middleText">Night Starting at <span class="money">46$</span></div>
               <div class="starsRating">
                 <span class="star sOn"><i class="fas fa-star"></i></span>
                 <span class="star sOn"><i class="fas fa-star"></i></span>
@@ -97,10 +100,10 @@
             </div>
           </div>
           <div class="accommodations">
-            <div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+            <div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/5.jpg" alt="Location"></div>
             <div class="displayInfo">
-              <div class="topText">Auberge la Cannebiere</div>
-              <div class="middleText">Night Starting at <span class="money">25$</span></div>
+              <div class="topText">Auberg Le Panier</div>
+              <div class="middleText">Night Starting at <span class="money">23$</span></div>
               <div class="starsRating">
                 <span class="star sOn"><i class="fas fa-star"></i></span>
                 <span class="star sOn"><i class="fas fa-star"></i></span>
@@ -111,10 +114,10 @@
             </div>
           </div>
           <div class="accommodations">
-            <div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+            <div class="accommodationsImg"><img src="assets/sub/images/rooms/4_small/6.jpg" alt="Location"></div>
             <div class="displayInfo">
-              <div class="topText">Auberge la Cannebiere</div>
-              <div class="middleText">Night Starting at <span class="money">25$</span></div>
+              <div class="topText">Hotel chez Amina</div>
+              <div class="middleText">Night Starting at <span class="money">96$</span></div>
               <div class="starsRating">
                 <span class="star sOn"><i class="fas fa-star"></i></span>
                 <span class="star sOn"><i class="fas fa-star"></i></span>
@@ -132,10 +135,10 @@
       <div class="title t2"><h2>Most Popular</h2><span><i class="fas fa-chart-line"></i></span></div>
         <div class="popularsContainer">
         <div class="populars">
-          <div class="popularsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+          <div class="popularsImg"><img src="assets/sub/images/rooms/4_small/7.jpg" alt="Location"></div>
           <div class="displayInfo d1">
-            <div class="topText p3">Auberge la Cannebiere</div>
-            <div class="middleText p1">Night Starting at <span class="money">25$</span></div>
+            <div class="topText p3">Morning Sun Hotel</div>
+            <div class="middleText p1">Night Starting at <span class="money">128$</span></div>
             <div class="starsRating p2">
               <span class="star sOn"><i class="fas fa-star"></i></span>
               <span class="star sOn"><i class="fas fa-star"></i></span>
@@ -146,10 +149,10 @@
           </div>
         </div>
         <div class="populars">
-          <div class="popularsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+          <div class="popularsImg"><img src="assets/sub/images/rooms/4_small/8.jpg" alt="Location"></div>
           <div class="displayInfo d1">
-            <div class="topText p3">Auberge la Cannebiere</div>
-            <div class="middleText p1">Night Starting at <span class="money">25$</span></div>
+            <div class="topText p3">Au Coeur de l'eau bed and breakfast</div>
+            <div class="middleText p1">Night Starting at <span class="money">71$</span></div>
             <div class="starsRating p2">
               <span class="star sOn"><i class="fas fa-star"></i></span>
               <span class="star sOn"><i class="fas fa-star"></i></span>
@@ -160,10 +163,10 @@
           </div>
         </div>
         <div class="populars">
-          <div class="popularsImg"><img src="assets/sub/images/rooms/4_small/1.jpg" alt="Location"></div>
+          <div class="popularsImg"><img src="assets/sub/images/rooms/4_small/9.jpg" alt="Location"></div>
           <div class="displayInfo d1">
-            <div class="topText p3">Auberge la Cannebiere</div>
-            <div class="middleText p1">Night Starting at <span class="money">25$</span></div>
+            <div class="topText p3">Tout bleu et Blanc Hotel</div>
+            <div class="middleText p1">Night Starting at <span class="money">68$</span></div>
             <div class="starsRating p2">
               <span class="star sOn"><i class="fas fa-star"></i></span>
               <span class="star sOn"><i class="fas fa-star"></i></span>
@@ -175,59 +178,58 @@
           </div>
         </div>
       </div>
-    </div>
-    <!--
-    <div class="middleContent">
+    </main>
+
+    <aside class="middleContent">
       <div class="title t3"><h2>Activities in Marsielle</h2></div>
       <div class="middleWrapper">
         <div class="activitiesBox activitiesLarge">
-          <img src="assets/sub/images/rooms/4_small/1.jpg" alt="activities">
-          <div class="actText">Old Port</div>
-        </div>
-        <div class="activitiesBox activitiesSmall">
-          <img src="assets/sub/images/rooms/4_small/1.jpg" alt="activities">
+          <img src="assets/sub/images/activites/4_small/1.jpg" alt="activities">
           <div class="actText p1">Old Port</div>
         </div>
         <div class="activitiesBox activitiesSmall">
-          <img src="assets/sub/images/rooms/4_small/1.jpg" alt="activities">
-          <div class="actText p1">Old Port</div>
+          <img src="assets/sub/images/activites/4_small/2.jpg" alt="activities">
+          <div class="actText p1">Pomegues Fort</div>
+        </div>
+        <div class="activitiesBox activitiesSmall">
+          <img src="assets/sub/images/activites/4_small/3.jpg" alt="activities">
+          <div class="actText p1">Frioul Island</div>
         </div>
         <div class="activitiesBox activitiesLarge">
-          <img src="assets/sub/images/rooms/4_small/1.jpg" alt="activities">
-          <div class="actText p1">Old Port</div>
+          <img src="assets/sub/images/activites/4_small/4.jpg" alt="activities">
+          <div class="actText p1">Calanques National Park</div>
         </div>
         <div class="activitiesBox activitiesSmall">
-          <img src="assets/sub/images/rooms/4_small/1.jpg" alt="activities">
-          <div class="actText p1">Old Port</div>
+          <img src="assets/sub/images/activites/4_small/5.jpg" alt="activities">
+          <div class="actText p1">Notre-Dame-de-la-Garde</div>
         </div>
         <div class="activitiesBox activitiesSmall">
-          <img src="assets/sub/images/rooms/4_small/1.jpg" alt="activities">
-          <div class="actText p1">Old Port</div>
+          <img src="assets/sub/images/activites/4_small/6.jpg" alt="activities">
+          <div class="actText p1">Longchamp Park</div>
         </div>
       </div>
-    </div>
-  -->
-    <!--
-    <div class="footer">
+    </aside>
+
+
+    <footer class="footer">
       <div class="footWrapper">
         <div class="footColWrap">
-          <div class="footCol">About</div>
+          <div class="footCol footTi">About</div>
           <div class="footCol">Site Map</div>
           <div class="footCol">General Terms and Conditions</div>
           <div class="footCol">Data and Privacy</div>  
         </div>
         <div class="footColWrap">
-          <div class="footCol">Our Accommodations</div>
+          <div class="footCol footTi">Our Accommodations</div>
           <div class="footCol">Quility Assesment</div>
           <div class="footCol">You have a hotel?</div>  
         </div>
       <div class="footColWrap">
-          <div class="footCol">Assistance</div>
+          <div class="footCol footTi">Assistance</div>
           <div class="footCol">Help Desk</div>
           <div class="footCol">Contact Us</div>  
         </div>
       </div>
-    </div>
-  -->
+    </footer>
   </body>
 </html>
