Final before review

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <nav class="navHeader">
       <div><a href="#"><img class="logo" src="assets/sub/images/logo/Reservia.svg" alt="Reservia Logo"></a></div>
       <div></div>
-      <div><a href="#">Accommodations</a></div>
-      <div><a href="#">Activities</a></div>
+      <div><a href="#topContent">Accommodations</a></div>
+      <div><a href="#middleContent">Activities</a></div>
       <div><a href="#">Sign Up</a></div>
     </nav>
     <header class="headerText">
@@ -30,17 +30,17 @@
     
     <nav class="filters">
       <div class="filterText">Filters</div>
-      <div class="filterBox"><div><i class="fas fa-money-bill-wave"></i></div>Low Cost</div>
-      <div class="filterBox"><div><i class="fas fa-user-friends"></i></div>Romantic</div>
-      <div class="filterBox"><div><i class="fas fa-heart"></i></div>Family-Friendly</div>
-      <div class="filterBox"><div><i class="fas fa-dog"></i></div>Pets Allowed</div>
+      <div class="filterBox f1"><div class="f1"><i class="fas fa-money-bill-wave"></i></div>Low Cost</div>
+      <div class="filterBox f2"><div class="f1"><i class="fas fa-user-friends"></i></div>Romantic</div>
+      <div class="filterBox f3"><div class="f1"><i class="fas fa-heart"></i></div>Family-Friendly</div>
+      <div class="filterBox f4"><div class="f1"><i class="fas fa-dog"></i></div>Pets Allowed</div>
     </nav>
     <div class="info">
       <p><span>i</span> More than 500 accommodations are available in this city</p>
     </div>
   
     <main class="topContent">
-      <div class="topOne">
+      <div class="topOne" id="topContent">
         <div class="title"><h2>Accomodations in Marseille</h2></div>
         <div class="flexWrapper">
           <div class="accommodations">
@@ -180,11 +180,11 @@
       </div>
     </main>
 
-    <aside class="middleContent">
+    <aside class="middleContent" id="middleContent">
       <div class="title t3"><h2>Activities in Marsielle</h2></div>
       <div class="middleWrapper">
         <div class="activitiesBox activitiesLarge">
-          <img src="assets/sub/images/activites/4_small/1.jpg" alt="activities">
+          <img src="assets/sub/images/activites/4_small/1Large.jpg" alt="activities">
           <div class="actText p1">Old Port</div>
         </div>
         <div class="activitiesBox activitiesSmall">
@@ -196,7 +196,7 @@
           <div class="actText p1">Frioul Island</div>
         </div>
         <div class="activitiesBox activitiesLarge">
-          <img src="assets/sub/images/activites/4_small/4.jpg" alt="activities">
+          <img src="assets/sub/images/activites/4_small/4Large.jpg" alt="activities">
           <div class="actText p1">Calanques National Park</div>
         </div>
         <div class="activitiesBox activitiesSmall">
