--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         </div>
         <div class="footColWrap">
           <div class="footCol footTi">Our Accommodations</div>
-          <div class="footCol">Quility Assesment</div>
+          <div class="footCol">Auality Assessment</div>
           <div class="footCol">You have a hotel?</div>  
         </div>
       <div class="footColWrap">
